--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
     "lucide-react": "^0.539.0",
+    "plotly.js": "^3.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.8.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
@@ -26,6 +28,7 @@
     "@eslint/js": "^9.32.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/react-plotly.js": "^2.6.3",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
